lesson_2/k8s/otus-lesson-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson-2-service # The resource name
  namespace: otus
spec:
  type: ClusterIP # Provides the Service on the internal IP of the cluster
  selector:
    app: lesson-2
  ports:
    - protocol:   TCP
      port:       8000 # Service port
      targetPort: 8000 # Application port inside pod labeled 'lesson-2'
